@@ -17,7 +17,6 @@
    <script type="text/javascript">
             dojo.require("dojo.event.*");
             dojo.require("dojo.io.*");
-            dojo.require("dojo.widget.*");
             dojo.require("dojo.lfx.*");
             dojo.require("dojo.style.*");
    </script>
@@ -31,7 +30,7 @@
     ** message, we fade it out then hide it entirely.
     */
     function show_status(message) {
-      node = dojo.byId("status_message");
+      var node = dojo.byId("status_message");
       node.innerHTML = message;
       if (message != "") {
 /*
@@ -41,7 +40,7 @@
       }
     }
     function clear_status() {
-      node = dojo.byId("status_message");
+      var node = dojo.byId("status_message");
 /*
       dojo.style.hide(node);
 */
