@@ -1,6 +1,7 @@
 2006-10-01  Doug Hellmann  <dhellmann@racemi.com>
 
 	* templates/base.html: Add status message display and handling.
+	We aren't using the widget package so don't include that.
 
 	* static/css/site.css: Change margins on message class.
 
